 /* $Id: ChangeLog,v 1.1095 2000-08-31 21:02:13 sandervl Exp $ */

 2000-08-31: Sander van Leeuwen <sandervl@xs4all.nl>
    - DDRAW:    Extra debug logging
                GetFourCCCodes should return nr of codes returned (always)
                QueryInterface; don't change the vtbl of the directdraw object
                return pointer to new virtual table instead
                (fixes crashes in dxview)
                Don't setup DirectDraw3D interface when creating IID_IDirect3D object
                (fixes another crash in dxview.exe)
                Video memory set to zero for HEL caps + no DDCAPS_COLORKEYHWASSIST
                Fixed HEL caps. (dwFXcaps)
                Fixed Driver caps (memset for HEL caps overwrote driver structure)
                Export DirectDrawCreateEx
    - KERNEL32: Level 2 logging for GetLastError (if lasterror != 0)
    - INCLUDE:  Header updates for compiling directx applets in OS/2

 2000-08-31: Przemyslaw Dobrowolski <dobrawka@asua.org.pl>
    - KERNEL32: Create more class registry keys during installation
                (for shell32 & IE)

 2000-08-30: Sander van Leeuwen <sandervl@xs4all.nl>
    - GDI32:    Workaround in StretchDIBits for PowerDVD (fixes wrong colors)
    - USER32:   WM_SETFOCUS fix (window can become invalid during processing)
                (rename folder in file open dialog -> click outside editbox
                 -> crash)
    - SHELL32:  Complete merge with latest Wine shell32 
                (fixes weird file open/save dialog box behaviour)
                Odin changes/additions in separate files or in #ifdef __WIN32OS2__
                statements

 2000-08-29: Michal Necasek <mike@mendelu.cz>
    - INCLUDE:  Watcom makefile fixes
    - ADVAPI32: Sample watcom makefile for advapi32 (not finished)
                
 2000-08-28: Michal Necasek <mike@mendelu.cz>
    - KERNEL32: RaiseException/RtlUnwind fixes

 2000-08-26: Sander van Leeuwen <sandervl@xs4all.nl>